# Simplification-of-Trajectory-Streams

./: .clangd  .gitignore  CMakeLists.txt  README.md  analysis.ipynb  analysis_summary.txt  analyze_results.py  benchmark  demo.mov  dots_frechet.csv  dots_frechet_times.csv  dots_points.csv  dots_points_times.csv  dp.csv  dp_frechet.csv  dp_frechet_times.csv  dp_points.csv  dp_points_times.csv  dp_times.csv  drawing.cpp  drawing.h  frechet  generate.cpp  minimize_frechet.csv  minimize_frechet_times.csv  minimize_points.csv  minimize_points_times.csv  plot_curves.cpp  result.csv  simplify.cpp
algorithms/: .gitignore  CMakeLists.txt  main.cpp
algorithms/inc/: algorithm.hpp  dp.hpp  fbqs.hpp  line.hpp  operb.hpp  point.hpp  trajectory.hpp
data/: input2.txt
data/taxi/: 1.txt  10.txt  100.txt  1000.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  14.txt  15.txt  16.txt  17.txt  (+92 more)
data/taxi_simplified/1/: dp_simplified.txt  fbqs_simplified.txt  operb_simplified.txt  operba_simplified.txt  original.txt  simplified.txt
data/taxi_simplified/10/: original.txt  simplified.txt
data/taxi_simplified/100/: dp_simplified.txt  fbqs_simplified.txt  operb_simplified.txt  operba_simplified.txt  original.txt  simplified.txt
data/taxi_simplified/1000/: dp_simplified.txt  fbqs_simplified.txt  operb_simplified.txt  operba_simplified.txt
data/taxi_simplified/2/: dp_simplified.txt  fbqs_simplified.txt  operb_simplified.txt  operba_simplified.txt  original.txt  simplified.txt
data/taxi_simplified/3/: dp_simplified.txt  fbqs_simplified.txt  operb_simplified.txt  operba_simplified.txt  original.txt  simplified.txt
data/taxi_simplified/4/: dp_simplified.txt  fbqs_simplified.txt  operb_simplified.txt  operba_simplified.txt  original.txt  simplified.txt
data/taxi_simplified/40/: original.txt  simplified.txt
data/taxi_simplified/45/: original.txt  simplified.txt
data/taxi_simplified/46/: original.txt  simplified.txt
data/taxi_simplified/47/: dp_simplified.txt  fbqs_simplified.txt  operb_simplified.txt  original.txt  simplified.txt
data/taxi_simplified/5/: dp_simplified.txt  fbqs_simplified.txt  operb_simplified.txt  operba_simplified.txt  original.txt  simplified.txt
data/taxi_simplified/50/: original.txt  simplified.txt
data/taxi_simplified/60/: original.txt  simplified.txt
data/taxi_simplified/8/: dp_simplified.txt  fbqs_simplified.txt  operb_simplified.txt  operba_simplified.txt  original.txt  simplified.txt
data/taxi_simplified/9/: original.txt  simplified.txt
data/taxi_simplified/99999/: dp_simplified.txt  fbqs_simplified.txt  operb_simplified.txt  operba_simplified.txt  original.txt  simplified.txt
report/: refs.bib  report.typ
script/: clean
tools/: normalize.cpp
